# annotate-and-finetune

./: CONVENTIONS.md  DEVLOG.md  LLMPIPE_VIGNETTE.md  README.md  data_io_template.py  examples.py  pyproject.toml
scripts/: annotate.py  download_model.py  ex_anno_refinement_prompt.yaml  ex_annotation_prompt.yaml  ex_annotation_prompt2.yaml  example_annotation_instructions.yaml  example_data.json  finetune.py  prepare_taskmaster2_dataset.py  prepare_taskmaster2_dialog_dataset.py  prepare_taskmaster2_turn_dataset.py  refine_annotation_classes.py  scratch.py  test_config.yaml
src/annotate_and_finetune/: __init__.py  annotate.py  finetune.py  main.py  summarize_list.py
src/annotate_and_finetune/data_science_agent/: cli_script_template.py  collect_files.py  generate_data_schema.py  generate_eda_script.py  generate_followup.py  generate_followups.py  generate_research_summary.py  get_data_sample.py  get_data_schema.py  get_eda_script_task.py  initialize_project.py  initialize_repo.py  revise_eda_task.py  run_aider_task.py  summarize_eda_output.py
src/data_science_agent/: cli_script_template.py
tests/: test_summarize_list.py
